# src/router/v1.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
-import { tagRouter } from '@/modules/tag/tag-router';
+import { tagRouter } from '../modules/tag/tag-router';
 import { taskRouter } from '@/modules/task/task-router';
+import { userRouter } from '@/modules/user/user-router';
 import swaggerUI from 'swagger-ui-express';
 import swaggerDoc from './docs/swagger.json';
 
@@ -10,5 +11,6 @@ routerV1.use('/docs', swaggerUI.serve);
 routerV1.get('/docs', swaggerUI.setup(swaggerDoc));
 routerV1.use('/tasks', taskRouter);
 routerV1.use('/tags', tagRouter);
+routerV1.use('/users', userRouter);
 
 export { routerV1 };
